Correct sectrions and elements alignment

--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,39 @@
   height: auto;
   max-width: 150px;
   width: 100%;
-  margin: 5%;
 }
 
-ul {
+ul.row {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 li.col-sm {
+  display: flex;
+  flex-flow: row nowrap;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 20px;
+}
+
+li.col-sm h4 {
+  margin: 10px;
+}
+
+#projects li.col-sm {
+  display: inline-block;
+}
+
+section {
+  padding: 5% 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+p {
+  text-align: justify;
 }
